--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "nodemon": "^3.1.9",
     "puppeteer": "^24.9.0"
