--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 PORT=3000
-JWT_SECRET=your_jwt_secret_here
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_email_password
-CLIENT_URL=http://localhost:5173
+JWT_SECRET="Job_Hunt_JWT_SECRET"
+EMAIL_USER="vitesh@gmail.com"
+EMAIL_PASS="Vitesh_Password"
+CLIENT_URL="http://localhost:5173"
 MONGODB_URI="mongodb+srv://PubliShelf:l5EVAaxgWTK5OucX@cluster0.ff00wp1.mongodb.net/Job_Hunt"
-NODE_ENV=development
+NODE_ENV='development'
