--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.6"
